# Fluno

./: Cargo.toml  LICENSE-APACHE  README.md
crates/fluno-artifact-spec/: Cargo.toml  README.md
crates/fluno-artifact-spec/src/: abi.rs  errors.rs  hash_manifest.rs  lib.rs  manifest.rs  schema.rs  validation_profile.rs
crates/fluno-syntax/: Cargo.toml  README.md
crates/fluno-syntax/src/: lib.rs  source_map.rs
crates/fluno-syntax/src/ast/: mod.rs  node.rs  operator.rs
crates/fluno-syntax/src/lexer/: mod.rs  token.rs
crates/fluno-syntax/src/parser/: expression.rs  mod.rs
crates/fluno-syntax/tests/: reference_snippets.rs
docs/: artifact-spec.md  public-boundary.md  release-strategy.md  syntax-overview.md
docs/reference/: README.md  artifact.md  domain-syntax.md  language.md  limitations.md  stdlib.md  toolchain.md
examples/artifact-manifest/: README.md  manifest.sample.json
examples/hello/: README.md
examples/representative-corpus/: README.md  arithmetic.fln  probability_minimal.fln  reactive_minimal.fln  struct_enum.fln
stdlib/: README.md
stdlib/stable/: core.fln  math.fln  prob.fln
